--- a/_config.yml
+++ b/_config.yml
@@ -84,9 +84,9 @@ naver_site_verification  :
 
 # Social Sharing
 twitter:
-  username               : sorooshmz
+  username               : notwitter
 facebook:
-  username               :
+  username               : nofacebook
   app_id                 :
   publisher              :
 og_image                 : # Open Graph/Twitter default site image
@@ -111,12 +111,12 @@ author:
   avatar           : "/assets/images/bio-photo.jpg"
   bio              : iust student
   location         : "تهران"
-  email            : soroosh2.1380@gmail.com
-  twitter: sorooshmz
+  email            : 
+  twitter: 
   linkedin: 
   google_scholar: Q25s5KkAAAAJ
   github: sorooshmz
-  instagram: sorooshmz
+  instagram: 
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
